[tool.poetry]
name = "python-poetry"
version = "1.11.0"
description = "A Python Docker image with Poetry installed and ready to use."
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
click = "8.1.7"
python-on-whales = "0.71.0"

[tool.poetry.dev-dependencies]
bcrypt = "4.1.3"
coverage = "7.5.1"
docker-image-py = "0.1.12"
furl = "2.1.3"
pytest = "8.2.0"
pytest-cov = "5.0.0"
pytest-dotenv = "0.5.2"
pre-commit = "3.7.1"
semver = "3.0.2"
testcontainers = "4.7.0"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
